--- a/src/app/allergie-create/allergie-create.component.html
+++ b/src/app/allergie-create/allergie-create.component.html
@@ -6,6 +6,7 @@
         <input type="email" formControlName="libelleAllergie" class="form-control" id="libelle" aria-describedby="emailHelp" placeholder="Enter email">
       </div>
       <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Submit</button>
+      <button type="button" class="btn btn-danger"> <a routerLink="/">Retour</a> </button>
     </form>
   </div>
 </div>
