--- a/src/app/allergie/allergie.component.html
+++ b/src/app/allergie/allergie.component.html
@@ -1,7 +1,7 @@
 <div class="card-body">
 
   <ul class="text-center list-inline py-3">
-    <li class="list-inline-item"><a routerLink="/allergies/create" class="btn btn-info">Ajouter Allergie</a></li>
+    <li class="list-inline-item"><a routerLink="/allergies/create" class="btn btn-info">AJOUTER ALLERGIE</a></li>
   </ul>
 </div>
 
