--- a/src/app/allergie-update/allergie-update.component.html
+++ b/src/app/allergie-update/allergie-update.component.html
@@ -3,9 +3,9 @@
     <form [formGroup]="form" (ngSubmit)="submit()">
       <div class="form-group">
         <label for="id">id Allergie </label>
-        <input type="text" formControlName="idAllergie" class="form-control" id="id"  value="{{idAllergiel}}" disabled placeholder="id">
+        <input type="text" formControlName="idAllergie" class="form-control" id="id" disabled value="{{idAllergie}}">
         <label for="libelle">Libelle</label>
-        <input type="text" formControlName="libelleAllergie" class="form-control" id="libelle" value="{{oldrAllergiel}}"  placeholder="Enter l'allergie">
+        <input type="text" formControlName="libelleAllergie" class="form-control" id="libelle"  value="{{oldrAllergiel}}"  placeholder="Enter l'allergie">
       </div>
       <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Submit</button>
       <button type="button" (click)="previousState()" class="btn btn-danger"> Retour</button>
